<resources>
    <string name="app_name">TODO_Application</string>
    <string name="action_settings">Settings</string>
    <string name="description">Description</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="save">SAVE</string>
    <string name="reminder">Reminder</string>
    <string name="repeat">Repeat</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="title">Title</string>
    <string name="monthly">Monthly</string>
    <string name="action_add_task">Add Task</string>
</resources>
